// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment should render AnonymousUser 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="anonymous"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Dr. Anonymous
          </div>
        </div>
        <div
          class="css-r2jplb-CommentFlair-CommentFlair ekbi54x3"
        >
          Source
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render PendingApproval 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render PendingUserChanges 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render Rejected 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render VerifiedUser 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutFlair 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Source
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <svg
        class="css-15t9qu5-avatarStyles"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutPreferredName 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Fallback User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutSource 1`] = `
<DocumentFragment>
  <article
    class="css-19ehku-CommentWrapper ekbi54x9"
    id="verified"
  >
    <header
      class="css-dmcn8p-CommentHeader ekbi54x8"
    >
      <img
        alt="DSC07717"
        class="css-fy51ct-ImageWrapper-avatarStyles e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
      <div
        class="css-1x1fqyu-CommentHeaderContent ekbi54x7"
      >
        <div
          class="css-l1mcyg-CommentName ekbi54x6"
        >
          <div
            class="css-1pg77me-CommentAuthor ekbi54x5"
          >
            Signed Up User
          </div>
          <div
            class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="css-srb6c6-CommentFlair ekbi54x3"
        >
          29. Juni 2023 | 09:39
        </div>
      </div>
    </header>
    <div
      class="css-7pcshh-CommentContent ekbi54x2"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        <strong>
          de Finibus Bonorum et Malorum
        </strong>
      </h1>
      <div
        class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-asp1ky-MuiTypography-root-paragraphStyles"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
